--- a/FW_Update_app/electron/index.html
+++ b/FW_Update_app/electron/index.html
@@ -85,6 +85,7 @@
           <div class="row">
             <span id="fileLabel" class="muted">No file selected</span>
             <button id="startUploadBtn" class="primary">Upload</button>
+            <button id="jumpAppBtn" class="ghost">Jump App</button>
           </div>
           <div class="meta">
             <div>
